tests/snapshots/codegen__.__test__function.c.snap
---
source: tests/codegen.rs
expression: "&mine"
---
stdout: "ret3() => 3\nadd2(3, 5) => 8\nsub2(5, 3) => 2\nadd6(1, 2, 3, 4, 5, 6) => 21\nadd6(1, 2, add6(3, 4, 5, 6, 7, 8), 9, 10, 11) => 66\nadd6(1, 2, add6(3, add6(4, 5, 6, 7, 8, 9), 10, 11, 12, 13), 14, 15, 16) => 136\nadd2(3, 4) => 7\nsub2(4, 3) => 1\nfib(9) => 55\n({ sub_char(7, 3, 3); }) => 1\nsub_long(7, 3, 3) => 1\nsub_short(7, 3, 3) => 1\n*(int *)g1_addr() => 3\nint_to_char(261) => 5\ndiv_long(-10, 2) => -5\nbool_fn_add(3) => 1\nbool_fn_sub(3) => 0\nbool_fn_add(-3) => 1\nbool_fn_sub(-3) => 0\nbool_fn_add(0) => 1\nbool_fn_sub(0) => 1\nstatic_fn() => 3\n({ int x[2]; x[0] = 3; param_decay(x); }) => 3\ncounter() => 2\ncounter() => 4\ncounter() => 6\ntrue_fn() => 1\nfalse_fn() => 0\nchar_fn() => 3\nshort_fn() => 5\nuchar_fn() => 251\nushort_fn() => 65528\nschar_fn() => -5\nsshort_fn() => -8\nadd_all(3,1,2,3) => 6\nadd_all(4,1,2,3,-1) => 5\n1 2 foo\n({ char buf[100]; sprintf(buf, \"%d %d %s\", 1, 2, \"foo\"); strcmp(\"1 2 foo\", buf); }) => 0\n({ char buf[100]; fmt(buf, \"%d %d %s\", 1, 2, \"foo\"); strcmp(\"1 2 foo\", buf); }) => 0\nadd_float(2.3, 3.8) => 6\nadd_double(2.3, 3.8) => 6\nadd_float3(2.5, 2.5, 2.5) => 7\nadd_double3(2.5, 2.5, 2.5) => 7\nOK\n"
status: 0
