tests/snapshots/codegen__.__test__generic.c.snap
---
source: tests/codegen.rs
expression: "&mine"
---
stdout: "_Generic(100.0, double: 1, int *: 2, int: 3, float: 4) => 1\n_Generic((int *)0, double: 1, int *: 2, int: 3, float: 4) => 2\n_Generic((int[3]){}, double: 1, int *: 2, int: 3, float: 4) => 2\n_Generic(100, double: 1, int *: 2, int: 3, float: 4) => 3\n_Generic(100f, double: 1, int *: 2, int: 3, float: 4) => 4\nOK\n"
status: 0
