tests/snapshots/codegen__.__test__include_macro.c.snap
---
source: tests/codegen.rs
expression: "&mine"
---
stdout: "foo => 3\nfoo => 4\nfoo => 3\nfoo => 4\nOK\n"
status: 0
