tests/snapshots/codegen__.__test__macro.c.snap
---
source: tests/codegen.rs
expression: "&mine"
---
stdout: "include1 => 5\ninclude2 => 7\nm => 5\nm => 3\nm => 3\nm => 2\nm => 2\nm => 3\nm => 1\nm => 2\nM1 => 3\nM1 => 4\n5 => 12\n5 => 23\n5 => 5\nm => 5\nm => 5\nM2 => 9\nM3 => 12\nM4 => 13\nm => 3\nm => 5\nm => 3\nm => 5\nM7() => 1\nM7 => 5\nret3 M7 => 3\nM8(3, 4) => 7\nM8(3+4, 4+5) => 24\nM8(3+4, 4+5) => 63\nM8(, 4+5) => 9\nOK\n"
status: 0
