tests/snapshots/codegen__.__test__offsetof.c.snap
---
source: tests/codegen.rs
expression: "&mine"
---
stdout: "offsetof(T, a) => 0\noffsetof(T, b) => 4\noffsetof(T, c) => 8\noffsetof(T, d) => 16\nOK\n"
status: 0
