tests/snapshots/codegen__.__test__pointer.c.snap
---
source: tests/codegen.rs
expression: "&mine"
---
stdout: "({ int x=3; *&x; }) => 3\n({ int x=3; int *y=&x; int **z=&y; **z; }) => 3\n({ int x=3; int y=5; *(&x+1); }) => 5\n({ int x=3; int y=5; *(&y-1); }) => 3\n({ int x=3; int y=5; *(&x-(-1)); }) => 5\n({ int x=3; int *y=&x; *y=5; x; }) => 5\n({ int x=3; int y=5; *(&x+1)=7; y; }) => 7\n({ int x=3; int y=5; *(&y-2+1)=7; x; }) => 7\n({ int x=3; (&x+2)-&x+3; }) => 5\n({ int x, y; x=3; y=5; x+y; }) => 8\n({ int x=3, y=5; x+y; }) => 8\n({ int x[2]; int *y=&x; *y=3; *x; }) => 3\n({ int x[3]; *x=3; *(x+1)=4; *(x+2)=5; *x; }) => 3\n({ int x[3]; *x=3; *(x+1)=4; *(x+2)=5; *(x+1); }) => 4\n({ int x[3]; *x=3; *(x+1)=4; *(x+2)=5; *(x+2); }) => 5\n({ int x[2][3]; int *y=x; *y=0; **x; }) => 0\n({ int x[2][3]; int *y=x; *(y+1)=1; *(*x+1); }) => 1\n({ int x[2][3]; int *y=x; *(y+2)=2; *(*x+2); }) => 2\n({ int x[2][3]; int *y=x; *(y+3)=3; **(x+1); }) => 3\n({ int x[2][3]; int *y=x; *(y+4)=4; *(*(x+1)+1); }) => 4\n({ int x[2][3]; int *y=x; *(y+5)=5; *(*(x+1)+2); }) => 5\n({ int x[3]; *x=3; x[1]=4; x[2]=5; *x; }) => 3\n({ int x[3]; *x=3; x[1]=4; x[2]=5; *(x+1); }) => 4\n({ int x[3]; *x=3; x[1]=4; x[2]=5; *(x+2); }) => 5\n({ int x[3]; *x=3; x[1]=4; x[2]=5; *(x+2); }) => 5\n({ int x[3]; *x=3; x[1]=4; 2[x]=5; *(x+2); }) => 5\n({ int x[2][3]; int *y=x; y[0]=0; x[0][0]; }) => 0\n({ int x[2][3]; int *y=x; y[1]=1; x[0][1]; }) => 1\n({ int x[2][3]; int *y=x; y[2]=2; x[0][2]; }) => 2\n({ int x[2][3]; int *y=x; y[3]=3; x[1][0]; }) => 3\n({ int x[2][3]; int *y=x; y[4]=4; x[1][1]; }) => 4\n({ int x[2][3]; int *y=x; y[5]=5; x[1][2]; }) => 5\nOK\n"
status: 0
